# CARMI

./: .gitignore  LICENSE  README.md
alex/: alex.h  alex_nodes.h
rs/: multi_map.h  radix_spline.h
src/: CMakeLists.txt  experiment.cpp
src/baseline/: workloads.h
src/experiment/: core.cpp  experiment_params.h  main_experiment.cpp
src/experiment/dataset/: lognormal_distribution.h  longitudes.h  longlat.h  normal_distribution.h  uniform_distribution.h  ycsb.h
src/experiment/workload/: public_functions.cpp  workloads.h
src/include/: baseNode.h  carmi.h  carmi_common.h  carmi_external.h  params.h
src/include/construct/: construct_root.h  construction.h  dp.h  dp_inner.h  dp_leaf.h  greedy.h  minor_function.h  store_node.h  structures.h
src/include/dataManager/: datapoint.h
src/include/func/: calculate_space.h  delete_function.h  find_function.h  inlineFunction.h  insert_function.h  print_structure.h  update_function.h
src/include/nodes/innerNode/: bs_model.h  candidate_plr.h  lr_model.h  plr_model.h
src/include/nodes/leafNode/: array_type.h  leaf_nodes.h
src/include/nodes/rootNode/: root_nodes.h
src/include/nodes/rootNode/trainModel/: linear_regression.h  piecewireLR.h  prefetch_plr.h  robust_lr.h
src/profiler/: binary_search.cpp  inner_node_time.cpp  leaf_node_time.cpp
